--- a/Parcial/gestion_tareas/templates/gestion_tareas/Login.html
+++ b/Parcial/gestion_tareas/templates/gestion_tareas/Login.html
@@ -7,31 +7,14 @@
     </head>
     <body>
 
-        <h2>Bienvenido</h2>
-        <!--<h4>Nombre:{{nombre}}</h4>
-        <h4>Apellido:{{apellido}}</h4>
-        <h4>Edad:{{edad}}</h4>
-        <br>-->
-
         <h3>Ingrese nueva tarea</h3>
-
-        {% for Tareas in TareaMODELO %}
-        <h4>Título:{{Tareas.Titulo}}</h4>
-        <h4>Descripción:{{Tareas.Descripcion}}</h4>
-        <h4>Fecha de creación:{{Tareas.Fecha_de_creacion}}</h4>
-        <h4>Fecha de entrega:{{Tareas.Fecha_de_entrega}}</h4>
-        <h4>Usuario designado:{{Tareas.Usuario_designado}}</h4>
-        {% endfor %}
 
         <form method="POST" action="{% url 'gestion_tareas:Login' %}">
         {% csrf_token %}
 
-            <input type="Text" name="TituloTarea">
-            <input type="Text" name="DescripcionTarea">
-            <input type="Text" name="FechaCTarea">
-            <input type="Text" name="FechaETarea">
-            <input type="Text" name="UsuarioTarea">
-            <button type="Submit">Guardar informacion</button>
+            <input type="Text" name="NombreUsuario">
+            <input type="Text" name="ClaveUsuario">
+            <button type="Submit">Ingresar</button>
 
         </form>
 
