Todo funcional, falta ponerlo en orden y con formato

--- a/Parcial/gestion_tareas/templates/gestion_tareas/DetalleTareas.html
+++ b/Parcial/gestion_tareas/templates/gestion_tareas/DetalleTareas.html
@@ -15,6 +15,9 @@
         <h4>Fecha de entrega:{{ tarea_seleccionada.Fecha_de_entrega }}</h4>
         <h4>Usuario designado:{{ tarea_seleccionada.Usuario_designado }}</h4>
 
+
+        <button><a href="{% url 'gestion_tareas:Dashboard' %}">Volver</a></button>
+
     </body>
 
 
