--- a/Parcial/gestion_tareas/templates/gestion_tareas/DetalleTareas.html
+++ b/Parcial/gestion_tareas/templates/gestion_tareas/DetalleTareas.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <h3>Ingrese nueva tarea</h3>
+        <h3>Información Total de la Tarea</h3>
 
         <h4>Título:{{ tarea_seleccionada.Titulo }}</h4>
         <h4>Descripción:{{ tarea_seleccionada.Descripcion }}</h4>
